Spacing issues.

--- a/sites/mainframe50/css/scss/_ww_cci.scss
+++ b/sites/mainframe50/css/scss/_ww_cci.scss
@@ -175,7 +175,7 @@
 }
 
 .ibm_cci-ey {
-	padding-top: 300px;
+	padding-top: 400px;
 }
 
 
