--- a/sites/mainframe50/css/ww_cci.css
+++ b/sites/mainframe50/css/ww_cci.css
@@ -163,7 +163,7 @@ sites/
   min-height: 880px; }
 
 .ibm_cci-ey {
-  padding-top: 300px; }
+  padding-top: 400px; }
 
 .ibm-cta-chevron-link:after {
   color: #00649d;
